fix: fix change hero top padding, change btn position mobile

--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	align-items: center;
 	z-index: 0;
-	padding: 4rem 0 4rem;
+	padding: 2rem 0 4rem;
 	overflow: hidden;
 	min-height: 40rem;
 	.container{
@@ -61,7 +61,7 @@
 	@include max(sm) {
 		//padding: 12rem 0 8rem;
 		text-align: left;
-		min-height: 60rem;
+		min-height: 50rem;
 	}
 	&.hero-banner{
 		@include min(lg) {
