--- a/src/scss/components/boxes.scss
+++ b/src/scss/components/boxes.scss
@@ -341,8 +341,10 @@
 	.btn-cta{
 		padding: 1.6rem 3.2rem;
         width: 100%;
-        max-width: 32rem;
+        max-width: 28rem;
         text-align: center;
+		margin: 2rem auto 0;
+		display: block;
 		@include min(md) {
 			width: auto;
 			display: block;
@@ -1041,6 +1043,8 @@ button{
 		width: 100%;
 		text-align: center;
 		max-width: 31.2rem;
+		margin: 0 auto 0;
+		display: block;
 		@include min(md) {
 			max-width: 100%;
 			text-align: center;
